# geek_news_fast_api

./: .cursorignore  .cursorrules  .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  geek_news.ipynb  generator.py  news.ipynb  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  server.py  theme_changer.py
docs/: README.md  architecture-rules.md  coding-style-guide.md  development-rules.md  modification-plan.md
output/: geek_news.html
templates/: combined_template.html  cover_template.html  news_template.html  style.css  summary_item_template.html  summary_prompt.txt  summary_template.html
web-editor/: news.ipynb  package.json  pnpm-lock.yaml  tailwind.config.js
web-editor/src/: App.tsx  index.css
web-editor/src/components/: ColorPicker.tsx  DraggableCanvas.tsx  DraggableItem.tsx  Editor.tsx  ElementProperties.tsx  ElementToolbar.tsx  ExportPanel.tsx  GradientEditor.tsx  PropertyPanel.tsx  SaveLoadPanel.tsx  Toolbar.tsx  types.ts
web-editor/src/store/: elementStore.ts  persistStore.ts
web-editor/src/types/: index.ts
web-editor/src/utils/: themeGenerator.ts
