[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "card-news"
version = "0.1.0"
description = "GeekNews Card News Generator"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.9"
dependencies = [
    "transformers",
    "torch",
    "playwright",
    "httpx",
    "beautifulsoup4",
    "lxml",
    "sentencepiece",
    "protobuf",
    "python-dotenv",
    "crawlee",
    "fastapi>=0.115.14",
    "boto3>=1.38.46",
    "pillow>=11.2.1",
    "openai>=1.93.0",
    "apscheduler>=3.11.0",
    "uvicorn>=0.34.3",
]

[tool.hatch.build.targets.wheel]
packages = ["."] 
